--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -13,6 +13,7 @@ $black-a66: rgba(0,0,0,.66);
 $black-a33: rgba(0,0,0,.33);
 $black-a25: rgba(0,0,0,.25);
 $black-a15: rgba(0,0,0,.15);
+$black-a05: rgba(0,0,0,.05);
 $white-a16: rgba(255,255,255,.16);
 $white-a33: rgba(255,255,255,.33);
 $white-a50: rgba(255,255,255,.50);
