--- a/webroot/scss/templates/orb_card_stage_menu.scss
+++ b/webroot/scss/templates/orb_card_stage_menu.scss
@@ -12,6 +12,18 @@
     background-color : $xtreme-red;
     margin           : 0;
   }
+  &.slide-left {
+    -webkit-transform: translate(-1 * $orb-card-stage-menu-width, 0);
+    -moz-transform: translate(-1 * $orb-card-stage-menu-width, 0);
+    -o-transform: translate(-1 * $orb-card-stage-menu-width, 0);
+    transform: translate(-1 * $orb-card-stage-menu-width, 0);
+  }
+  &.slide-right {
+    -webkit-transform: translate($orb-card-stage-menu-width, 0);
+    -moz-transform: translate($orb-card-stage-menu-width, 0);
+    -o-transform: translate($orb-card-stage-menu-width, 0);
+    transform: translate($orb-card-stage-menu-width, 0);
+  }
 }
 
 .orb-card-stage-menu {
