--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4781,6 +4781,9 @@ li.orbcat {
     font-family: "Helvetica Neue Medium Condensed", arial, sans-serif;
     color: white;
     font-size: 0.875rem; }
+    @media only screen and (max-width: 40em) {
+      li.orbcat a {
+        font-size: 0.7rem; } }
   li.orbcat:hover a, li.orbcat:hover span, li.orbcat.active a, li.orbcat.active span {
     color: #faea06; }
 
@@ -4883,6 +4886,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: fixed; }
+
+#page-content {
+  height: 100%; }
+  @media only screen and (min-width:64.063em) {
+    #page-content {
+      overflow: hidden; } }
 
 * {
   transition: background-color 0.3s ease-in-out, background-image 0.3s ease-in-out, color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
@@ -5179,14 +5188,32 @@ nav#login {
   z-index: 10000;
   overflow: hidden; }
 
-#close-primary-modal span {
+#close-modal span {
   display: inline-block;
   font-size: 0.75rem; }
-  #close-primary-modal span:first-of-type {
+  #close-modal span:first-of-type {
     line-height: 1.5rem;
     font-family: "Helvetica Neue Light Condensed", arial, sans-serif; }
-#close-primary-modal:hover span {
+#close-modal:hover span {
   color: #b4b4b4; }
+#close-modal .flash {
+  color: white; }
+  #close-modal .flash:hover {
+    opacity: 0.8; }
+
+#flash-modal {
+  position: fixed;
+  z-index: 10001;
+  width: 40rem;
+  height: 6rem; }
+  #flash-modal #flash-modal-content {
+    width: 100%;
+    border: 3px solid white;
+    background-color: #0779be;
+    border-radius: 0.75rem;
+    padding: 0.9375rem; }
+  #flash-modal .slide-up {
+    -webkit-transform: translate(0, -6rem); }
 
 #primary-modal {
   position: fixed;
@@ -5356,12 +5383,70 @@ div.view-cart-row.total * {
     max-height: 150px;
     width: 100%; }
 
+@keyframes stash-splash {
+  90% {
+    opacity: 1; }
+
+  100% {
+    display: none; } }
+
+@-webkit-keyframes stashsplash {
+  90% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@-webkit-keyframes stash-splash-circle {
+  75% {
+    -webkit-transform: scale(0.1, 0.1) rotateY(1080deg); }
+
+  100% {
+    -webkit-transform: translate(0, -1000px) scale(0.1, 0.1) rotateY(450deg); } }
+
+@-webkit-keyframes stash-splash-bar {
+  99% {
+    -webkit-transform: translate(-3000px, 0);
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: translate(-3000px, 0);
+    opacity: 0; } }
+
+@-webkit-keyframes stash-splash-order-link {
+  100% {
+    -webkit-transform: translateY(-68px) scale(0.9, 0.9) rotateX(-90deg); } }
+
+@-webkit-keyframes stash-splash-menu-link {
+  100% {
+    -webkit-transform: translateY(68px) scale(0.9, 0.9) rotateX(90deg); } }
+
 main#splash {
   width: 100%;
   height: 100%;
   z-index: 9000;
   vertical-align: middle;
-  transition: background-image 0.3s ease-in-out; }
+  transition: none;
+  -webkit-animation: stash-splash 0.1s 1 normal 1.6s paused forwards;
+  animation: stash-splash 0.1s 1 normal 1.6s paused forwards;
+  -webkit-animation-name: stashsplash;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+  -webkit-animation-delay: 0;
+  -webkit-animation-play-state: paused;
+  -webkit-animation-fill-mode: forwards;
+  animation-name: stashsplash;
+  animation-duration: 3s;
+  animation-timing-function: ease;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-delay: 0;
+  animation-play-state: paused;
+  animation-fill-mode: forwards; }
+  main#splash * {
+    transition: none; }
   main#splash div, main#splash a {
     position: relative; }
   main#splash a {
@@ -5392,11 +5477,8 @@ main#splash {
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    transition: transform 1s; }
-    main#splash #splash-circle.flipped {
-      ms-transform: rotateY(450deg);
-      -webkit-transform: rotateY(450deg);
-      transform: rotateY(450deg); }
+    -webkit-animation: stash-splash-circle 1s ease-in 1 normal 0.6s paused forwards;
+    animation: stash-splash-circle 1s ease-in 1 normal 0.6s paused forwards; }
   main#splash #menu-wrapper, main#splash #order-wrapper {
     height: 40%; }
   main#splash #order, main#splash #menu {
@@ -5411,17 +5493,23 @@ main#splash {
   main#splash #order {
     background-image: url("../img/splash/order_soon.png");
     background-position: center 80%;
-    cursor: default; }
+    cursor: default;
+    -webkit-animation: stash-splash-order-link 0.3s 1 normal 0s paused forwards;
+    animation: stash-splash-order-link 0.3s 1 normal 0s paused forwards; }
   main#splash #menu {
     min-width: 10.9375rem;
     background-image: url("../img/splash/menu.png");
-    background-position: center 20%; }
+    background-position: center 20%;
+    -webkit-animation: stash-splash-menu-link 0.5s ease 1 normal 0s paused forwards;
+    animation: stash-splash-circle 0.5s ease 1 normal 0s paused forwards; }
     main#splash #menu:hover {
       background-image: url("../img/splash/menu_hover.png"); }
   main#splash #splash-bar-wrapper {
     position: relative;
     width: 100%;
-    height: 20%; }
+    height: 20%;
+    -webkit-animation: stash-splash-bar 0.3s linear 1 normal 0.3s paused forwards;
+    animation: stash-splash-bar 0.3s linear 1 normal 0.3s paused forwards; }
     main#splash #splash-bar-wrapper .spacer {
       height: 5%; }
   main#splash #splash-bar {
@@ -5461,6 +5549,12 @@ main#splash {
     height: 100%;
     min-width: 10.9375rem;
     margin: 0 auto; }
+  main#splash.stash {
+    -webkit-animation-play-state: running;
+    animation-play-state: running; }
+    main#splash.stash #splash-circle, main#splash.stash #splash-bar-wrapper, main#splash.stash #order, main#splash.stash #menu {
+      -webkit-animation-play-state: running;
+      animation-play-state: running; }
 
 #splash-modal-wrapper {
   display: none;
@@ -5560,9 +5654,13 @@ body {
 
 main#menu {
   min-height: 100%;
-  width: 100%;
+  width: 81rem;
+  padding: 3rem;
   padding-top: 5.3125rem;
-  overflow: auto; }
+  overflow-x: hidden; }
+  @media only screen and (max-width: 40em) {
+    main#menu {
+      width: 40rem; } }
   main#menu #menu-container {
     margin-left: auto;
     margin-right: auto;
@@ -5602,7 +5700,7 @@ ul#user-activity-panel {
 
 ***************************************************************/
 ul#orbcat-menu {
-  width: 50rem;
+  width: 100%;
   height: 17.8125rem;
   margin: 0 1.25rem;
   background: #e02027;
@@ -5621,6 +5719,9 @@ ul#orbcat-menu {
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e02027', endColorstr='#ac0819', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */ }
+  @media only screen and (max-width: 40em) {
+    ul#orbcat-menu {
+      margin: 0; } }
   ul#orbcat-menu.slide-right {
     -webkit-transform: translate(2000px, 0);
     -moz-transform: translate(2000px, 0);
@@ -5715,7 +5816,7 @@ li.orbcat {
     margin-bottom: 0.625rem; }
 
 #orbcat-menu-title {
-  width: 50rem;
+  width: 100%;
   left: 0.9375rem;
   -webkit-transform: translateY(0.7125rem);
   -moz-transform: translateY(0.7125rem);
