Updated routing; new modals for splash & flash

--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -11,6 +11,7 @@
 @import "globals";
 @import "buttons";
 @import "nav";
+@import "footer";
 
 // TEMPLATES                // z-indices
 @import "templates/modals"; // 9999
