--- a/webroot/scss/templates/menu.scss
+++ b/webroot/scss/templates/menu.scss
@@ -5,10 +5,10 @@ html, nav, body, main, footer {
 body {
   background-repeat : no-repeat;
   background-size   : cover;
-  .menu {
-    background-image : url("../img/menu_bg.xlg.bright.jpg");
-    overflow         : auto;
-  }
+//  .menu {
+//    background-image : url("../img/menu_bg.xlg.bright.jpg");
+//    overflow         : auto;
+//  }
 }
 
 
