--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -21,9 +21,12 @@
   &:hover span {
     color:$light-grey;
   }
-  .flash {
-    color: $white;
-    &:hover { opacity:0.8;}
+  &.flash {
+    span {
+      color: $white;
+      &:last-of-type { padding-right:0.5rem;}
+    }
+    &:hover span { color:$light-grey;}
   }
 }
 
@@ -45,6 +48,13 @@
   }
 }
 
+#splash-modal {
+  position: fixed;
+  top:0;
+  left:0;
+  z-index:10001;
+  padding:$base-padding;
+}
 
 #primary-modal {
   * { color:$text-grey;}
@@ -57,7 +67,7 @@
   max-width: $row-width;
   min-height:200px;
   height:auto;
-  z-index:100001;
+  z-index:10001;
   overflow-y:auto;
   padding: $base-padding;
   input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
