--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4691,24 +4691,46 @@ span.icon-hn-inline {
   content: "M"; }
 
 @font-face {
+  font-family: "Helvetica Neue Condensed Black";
+  src: url('../files/font/HelveticaNeueLTStdBlkCn.otf');
+  src: url('../files/font/HelveticaNeueLTStdBlkCn.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdBlkCn.woff') format('woff'), url('../files/font/HelveticaNeueLTStdBlkCn.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdBlkCn.svg#HelveticaNeueLTStdBlkCn') format('svg');
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
   font-family: "Helvetica Neue Medium Condensed";
-  src: url("../files/HelveticaNeueLTStd-MdCn.otf"); }
+  src: url('../files/font/HelveticaNeueLTStdMdCn.otf');
+  src: url('../files/font/HelveticaNeueLTStdMdCn.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdMdCn.woff') format('woff'), url('../files/font/HelveticaNeueLTStdMdCn.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdMdCn.svg#HelveticaNeueLTStdMdCn') format('svg');
+  font-weight: normal;
+  font-style: normal; }
 
 @font-face {
   font-family: "Helvetica Neue Light Condensed";
-  src: url("../files/HelveticaNeueLTStd-LtCn.otf"); }
+  src: url('../files/font/HelveticaNeueLTStdLtCn.otf');
+  src: url('../files/font/HelveticaNeueLTStdLtCn.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdLtCn.woff') format('woff'), url('../files/font/HelveticaNeueLTStdLtCn.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdLtCn.svg#HelveticaNeueLTStdLtCn') format('svg');
+  font-weight: normal;
+  font-style: normal; }
 
 @font-face {
   font-family: "Helvetica Neue Thin";
-  src: url("../files/HelveticaNeueLTStd-Th.otf"); }
+  src: url('../files/font/HelveticaNeueLTStdTh.otf');
+  src: url('../files/font/HelveticaNeueLTStdTh.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdTh.woff') format('woff'), url('../files/font/HelveticaNeueLTStdTh.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdTh.svg#HelveticaNeueLTStdTh') format('svg');
+  font-weight: normal;
+  font-style: normal; }
 
 @font-face {
   font-family: "Helvetica Neue Thin Condensed";
-  src: url("../files/HelveticaNeueLTStd-ThCn.otf"); }
+  src: url('../files/font/HelveticaNeueLTStdThCn.otf');
+  src: url('../files/font/HelveticaNeueLTStdThCn.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdThCn.woff') format('woff'), url('../files/font/HelveticaNeueLTStdThCn.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdThCn.svg#HelveticaNeueLTStdThCn') format('svg');
+  font-weight: normal;
+  font-style: normal; }
 
 @font-face {
   font-family: "Helvetica Neue Ultra Light";
-  src: url("../files/HelveticaNeueLTStd-UltLt.otf"); }
+  src: url('../files/font/HelveticaNeueLTStdUltThCn.otf');
+  src: url('../files/font/HelveticaNeueLTStdUltThCn.eot?#iefix') format('embedded-opentype'), url('../files/font/HelveticaNeueLTStdUltThCn.woff') format('woff'), url('../files/font/HelveticaNeueLTStdUltThCn.ttf') format('truetype'), url('../files/font/HelveticaNeueLTStdUltThCn.svg#HelveticaNeueLTStdUltThCn') format('svg');
+  font-weight: normal;
+  font-style: normal; }
 
 .hn-l-cn {
   font-family: "Helvetica Neue Light Condensed", arial, sans-serif; }
@@ -5178,6 +5200,17 @@ nav#login {
       nav#login ul#login-options li.email:hover {
         background-image: url('../img/splash/email_icon.hover.png'); }
 
+footer#footer {
+  width: 100%;
+  left: 0;
+  position: absolute;
+  box-shadow: inset 0 2rem 2rem rgba(0, 0, 0, 0.5);
+  border-top: 2px solid #b4b4b4; }
+  footer#footer .disclaimer * {
+    font-family: "Helvetica Neue Light Condensed", arial, sans-serif;
+    color: #a0a0a0;
+    font-size: 0.75rem; }
+
 #modal-overlay-container {
   position: fixed;
   top: 0;
@@ -5196,10 +5229,12 @@ nav#login {
     font-family: "Helvetica Neue Light Condensed", arial, sans-serif; }
 #close-modal:hover span {
   color: #b4b4b4; }
-#close-modal .flash {
+#close-modal.flash span {
   color: white; }
-  #close-modal .flash:hover {
-    opacity: 0.8; }
+  #close-modal.flash span:last-of-type {
+    padding-right: 0.5rem; }
+#close-modal.flash:hover span {
+  color: #b4b4b4; }
 
 #flash-modal {
   position: fixed;
@@ -5214,6 +5249,13 @@ nav#login {
     padding: 0.9375rem; }
   #flash-modal .slide-up {
     -webkit-transform: translate(0, -6rem); }
+
+#splash-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10001;
+  padding: 0.9375rem; }
 
 #primary-modal {
   position: fixed;
@@ -5240,7 +5282,7 @@ nav#login {
   max-width: 75rem;
   min-height: 200px;
   height: auto;
-  z-index: 100001;
+  z-index: 10001;
   overflow-y: auto;
   padding: 0.9375rem; }
   #primary-modal * {
@@ -5567,39 +5609,6 @@ main#splash {
   background-color: rgba(0, 0, 0, 0.75);
   padding-top: 3rem; }
 
-#splash-modal {
-  display: none;
-  position: relative;
-  margin: 0 auto;
-  width: 50%;
-  height: auto;
-  max-width: 50rem;
-  min-width: 25rem;
-  min-height: 25rem;
-  max-height: 75%;
-  background-color: white; }
-  #splash-modal h1 {
-    width: 100%;
-    height: 4rem;
-    background-image: url('../img/splash/logo.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 1rem top;
-    background-color: #0779be; }
-  #splash-modal .content {
-    padding: 1rem;
-    width: 100%; }
-
-a.close-splash-modal {
-  float: right;
-  color: white;
-  background-color: #191919;
-  border-radius: 1000px;
-  width: 1.2rem;
-  height: 1.2rem;
-  line-height: 1rem;
-  text-align: center; }
-
 #grand-opening-deal {
   display: none;
   position: fixed;
@@ -5648,9 +5657,6 @@ html, nav, body, main, footer {
 body {
   background-repeat: no-repeat;
   background-size: cover; }
-  body .menu {
-    background-image: url("../img/menu_bg.xlg.bright.jpg");
-    overflow: auto; }
 
 main#menu {
   min-height: 100%;
