--- a/webroot/scss/footer.scss
+++ b/webroot/scss/footer.scss
@@ -1,1 +1,18 @@
-footer { position: absolute;}
+footer#footer {
+  width:100%;
+  left:0;
+  position: absolute;
+  box-shadow:inset 0 2rem 2rem $black-a50;
+  border-top:2px solid $light-grey;
+  .disclaimer {
+    * {
+      @include HelveticaLtCn;
+      color:$medium-grey;
+      font-size:0.75rem;
+    }
+    }
+//  .pagespan {
+//    width:100%;
+//    heigh:1px;
+//    box-shadow: 0px 1rem
+}
